# mithril-r0

./: Cargo.toml  README.md
host/: Cargo.toml
host/src/: helpers.rs  main.rs  parallel_prover.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods_comp/: Cargo.toml
methods_comp/guest/: Cargo.toml
methods_comp/guest/src/: main.rs
oakshield_common/: Cargo.toml
oakshield_common/src/: lib.rs
