[package]
name = "oakshield"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
mithril-dwarf ={ path = "../../../mithril-dwarf"}
#mithril-dwarf ={ git = "https://github.com/Sbcdn/mithril-dwarf.git", branch = "main" }
hex = "*"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0"}
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1"}
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0"}
